--- a/app/i18n/ru.toml
+++ b/app/i18n/ru.toml
@@ -97,15 +97,106 @@ super = """
 🧩 Демо-режим:
 • /tour — быстрый показ всех ролей
 • /help — эта справка
-
-👉 Вы также можете вручную нажимать кнопки ролей, чтобы вернуться в интересующий раздел.
 """
-teacher = "👩‍🏫 Учитель:\n• /notes — список заметок\n• /addnote — добавить\n• /ticket — заявка IT"
-admin = "🏛 Админ:\n• /tickets — заявки\n• /broadcast — рассылка"
-director = "📈 Директор:\n• /kpi — показатели"
-parent = "👪 Родитель:\n• /tasks — задания\n• /cert — справка"
-student = "👨‍🎓 Ученик:\n• /tasks — задания\n• /ask — вопрос учителю"
-psych = "🧑‍⚕️ Психолог:\n• /inbox — новые обращения"
+
+help_title = "❓ Справка по SchoolBot"
+help_unauthorized = """
+❓ **Справка по SchoolBot**
+
+🎓 SchoolBot - это образовательная платформа для всех участников учебного процесса.
+
+**Для начала работы:**
+1. Нажмите /start для запуска бота
+2. Пройдите онбординг или войдите в систему
+3. Выберите вашу роль в образовательном процессе
+
+**Основные команды:**
+• /start - запустить бота
+• /help - эта справка
+• /feedback - обратная связь
+• /theme - сменить тему
+
+**Роли в системе:**
+• 👨‍🎓 Ученик - просмотр заданий, вопросы учителю
+• 👩‍🏫 Учитель - заметки о учениках, заявки в IT
+• 👪 Родитель - справки, успеваемость ребенка
+• 🧑‍⚕️ Психолог - консультации, анонимные обращения
+• 🏛 Администратор - управление заявками, рассылки
+• 📈 Директор - KPI, статистика, отчеты
+
+**Поддержка:**
+Если у вас возникли вопросы, используйте команду /feedback
+"""
+
+help_start_button = "🚀 Начать"
+help_back_button = "🔙 Назад к справке"
+help_main_menu_button = "🏠 Главное меню"
+help_help_loaded = "Справка загружена"
+help_error_loading = "Произошла ошибка при загрузке справки"
+help_please_login = "Пожалуйста, сначала войдите в систему."
+help_user_not_found = "Ошибка: пользователь не найден."
+help_start_message = "🚀 Для начала работы нажмите /start"
+help_login_required = "❓ Для получения справки сначала войдите в систему"
+
+# Роли
+help_student_title = "👨‍🎓 **Справка для ученика**"
+help_teacher_title = "👩‍🏫 **Справка для учителя**"
+help_parent_title = "👪 **Справка для родителя**"
+help_psychologist_title = "🧑‍⚕️ **Справка для психолога**"
+help_admin_title = "🏛 **Справка для администратора**"
+help_director_title = "📈 **Справка для директора**"
+
+# Кнопки для ролей
+help_student_tasks = "📋 Задания"
+help_student_notes = "📝 Заметки"
+help_student_ask = "❓ Вопросы"
+help_teacher_notes = "📝 Заметки"
+help_teacher_tickets = "🛠 Заявки"
+help_teacher_students = "👥 Ученики"
+help_parent_tasks = "📋 Задания"
+help_parent_certs = "📄 Справки"
+help_parent_progress = "📈 Успеваемость"
+help_psych_inbox = "📥 Обращения"
+help_psych_requests = "📋 Запросы"
+help_psych_schedule = "📅 Расписание"
+help_admin_tickets = "🛠 Заявки"
+help_admin_broadcast = "📢 Рассылки"
+help_admin_stats = "📊 Статистика"
+help_director_kpi = "📈 KPI"
+help_director_stats = "📊 Статистика"
+help_director_reports = "📋 Отчеты"
+
+# FAQ
+help_faq_title = "❓ **Часто задаваемые вопросы**"
+help_faq_role_change = "**Q: Как изменить роль?**\nA: Обратитесь к администратору системы."
+help_faq_password = "**Q: Забыл пароль?**\nA: Используйте команду /start для повторной авторизации."
+help_faq_notifications = "**Q: Не получаю уведомления?**\nA: Проверьте настройки уведомлений в главном меню."
+help_faq_support = "**Q: Как связаться с поддержкой?**\nA: Используйте команду /feedback для обратной связи."
+
+[docs]
+list_header = "📄 Список доступных документов:"
+item_standard = "• Порядок оказания психолого‑педагогической помощи (Приказ ДОНМ №___)"
+item_pay = "• Методика оплаты труда педагогических работников"
+item_help = "• Официальные контакты служб помощи"
+reply_footer = "Выберите документ для получения ссылки или краткой информации."
+unknown_doc = "Документ не найден. Уточните запрос."
+
+[admin_requests]
+announcement = "Уважаемые коллеги!\n\n{announcement}\n\nДокумент: {url}"
+event_info = "Уважаемые родители и учащиеся!\n{event}.\nДата: {date}\nДоп. информация: {url}"
+
+[news]
+card_header = "📰 {title}"
+card_date = "Дата: {date}"
+card_desc = "{desc}"
+card_more = "Подробнее"
+
+[start]
+student = "Привет, ученик! Доступные команды: /docs /news"
+parent = "Здравствуйте, родитель! /docs /news /feedback"
+teacher = "Здравствуйте, учитель! /docs /news /support"
+admin = "Добро пожаловать в административный модуль. /announce /docs /news"
+unknown = "Роль не определена. Обратитесь в поддержку."
 
 [onboarding]
 welcome = "🎓 Добро пожаловать в SchoolBot!\n\nВыберите вашу роль в образовательном процессе:\n\nКаждая роль предоставляет уникальные возможности для эффективной работы в школе."
@@ -113,3 +204,110 @@ role_selected = "✅ Роль выбрана успешно!"
 role_confirmation = "Подтвердите выбор роли"
 back_to_selection = "🔄 Выбрать другую роль"
 start_onboarding = "🚀 Начать онбординг"
+
+[commands]
+start = "🚀 Запустить бота"
+help = "❓ Справка"
+menu = "🏠 Главное меню"
+feedback = "💬 Обратная связь"
+theme = "🌗 Сменить тему"
+
+[commands.student]
+tasks = "📋 Мои задания"
+notes = "📝 Мои заметки"
+ask = "❓ Задать вопрос"
+ticket = "🛠 Создать заявку"
+
+[commands.teacher]
+notes = "📝 Мои заметки"
+addnote = "➕ Добавить заметку"
+ticket = "🛠 Создать заявку"
+students = "👥 Мои ученики"
+
+[commands.parent]
+tasks = "📋 Задания ребенка"
+cert = "📄 Справки"
+progress = "📈 Успеваемость"
+ticket = "🛠 Создать заявку"
+
+[commands.psych]
+inbox = "📥 Входящие"
+requests = "📋 Запросы"
+schedule = "📅 Расписание"
+
+[commands.admin]
+tickets = "🛠 Заявки"
+broadcast = "📢 Рассылка"
+users = "👥 Пользователи"
+stats = "📊 Статистика"
+
+[commands.director]
+kpi = "📈 KPI"
+stats = "📊 Статистика"
+reports = "📋 Отчёты"
+tasks = "📋 Задачи"
+
+# === НОВЫЕ ШАБЛОНЫ СООБЩЕНИЙ ===
+
+[student_requests]
+request_psy = "Здравствуйте! Хочу обратиться к психологу. Меня тревожит ситуация с буллингом в классе. Прошу о консультации."
+psy_request_confirm = "✅ Ваша заявка принята. Психолог свяжется с вами в ближайшее время."
+psy_request_sent = "📤 Заявка отправлена психологу. Ожидайте ответа."
+
+[teacher_requests]
+support_request = "Не работает принтер в кабинете {room}. Требуется помощь специалиста."
+support_request_confirm = "✅ Ваша заявка принята. Ожидайте прихода специалиста сегодня до {time}."
+incident_report = "В {classroom} произошёл конфликт между учениками. Проведена беседа, уведомлены родители."
+incident_teacher_thank = "✅ Ваше сообщение отправлено директору и зарегистрировано."
+support_request_sent = "📤 Заявка отправлена в техподдержку. Номер заявки: #{ticket_id}"
+
+[psychologist]
+student_alert = "🆕 Новая заявка от ученика {student} ({classroom}):\nТема — {theme}.\nПросьба назначить встречу."
+psy_to_student = "Здравствуйте! Я получил вашу заявку. Давайте договоримся о времени встречи."
+parent_consent_request = "Ваш ребёнок подал заявку на консультацию с психологом. Необходима форма согласия. Нажмите «Согласен» для подтверждения."
+parent_consent_ok = "✅ Спасибо! Согласие получено, консультация будет назначена."
+parent_consent_no = "❌ Согласие не получено. Консультация отменена."
+consultation_scheduled = "📅 Консультация назначена на {date} в {time}. Место: {location}."
+
+[parent_requests]
+transfer_request = "Прошу перевести моего ребёнка ({child}, {classroom}) в группу углублённого английского языка."
+transfer_request_confirm = "✅ Заявка принята. Мы свяжемся с вами для уточнения в течение 3 дней."
+consent_yes = "Согласен"
+consent_no = "Отказать"
+consent_button_yes = "✅ Согласен"
+consent_button_no = "❌ Отказать"
+
+[admin_requests]
+power_outage = "⚠️ Внимание! {date} с {start} до {end} — плановое отключение электроэнергии. Просим завершить все работы заранее."
+event_announce = "📢 {date} в {time} состоится родительское собрание. Подтвердите присутствие кнопкой ниже."
+event_confirm = "✅ Ваша регистрация подтверждена."
+teacher_change = "🔄 Завтра урок {subject} проведёт {new_teacher} вместо основного учителя по причине болезни."
+broadcast_sent = "📤 Массовое уведомление отправлено {count} пользователям."
+confirm_presence = "✅ Подтвердить присутствие"
+
+[director]
+incident_notify = "🚨 Новое сообщение об инциденте в {classroom}. Приняты меры: {measures}."
+incident_received = "✅ Сообщение об инциденте получено и зарегистрировано."
+kpi_report = "📊 Отчёт KPI за {period}:\n• Активных пользователей: {users}\n• Заявок обработано: {tickets}\n• Заметок создано: {notes}"
+
+[support]
+request_received = "🆕 Новая заявка: {description}\nКабинет: {room}\nОт: {teacher}"
+request_processed = "✅ Заявка #{ticket_id} обработана. {description}"
+request_in_progress = "🔄 Заявка #{ticket_id} в работе. Ожидайте специалиста."
+
+[notifications]
+welcome_new_user = "🎉 Добро пожаловать в SchoolBot!\n\nВаша роль: {role}\nДоступные команды: /help"
+role_changed = "🔄 Ваша роль изменена на: {new_role}"
+system_maintenance = "🔧 Плановые технические работы {date} с {start} до {end}. Возможны перебои в работе."
+emergency_alert = "🚨 ВНИМАНИЕ! {message}"
+success_operation = "✅ Операция выполнена успешно."
+error_operation = "❌ Ошибка при выполнении операции. Попробуйте позже."
+
+[roles]
+student = "Ученик"
+teacher = "Учитель"
+parent = "Родитель"
+director = "Директор"
+admin = "Администратор"
+psychologist = "Психолог"
+support = "Техподдержка"
